# ROS-MovingTargetSearch

./: README.md
my_turtle/: CMakeLists.txt  package.xml
my_turtle/world/: circle_map.world  hunter.world  hunter.yaml  maze.world  square_map.world
navigation_stage/: CMakeLists.txt  multi_robot.rviz  package.xml
navigation_stage/launch/: move_base_amcl_chase.launch  send_goals.launch
navigation_stage/move_base_config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
navigation_stage/scripts/: teleop_twist_keyboard.py
navigation_stage/src/: RequestGoal.cpp  teleop_twist_keyboard.py
turtlebot_navigation/maps/: hunter.world
turtlebot_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
world/: circle_map.yaml  combi_map.world  combi_map.yaml  hunter.world  hunter.yaml  ldv_turtle_on_stage.cfg  square_map.yaml  turtlebot.inc
